--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,10 +4,9 @@
 - name: add user to sudoers without password
   become: true
   template:
-    src: sudoers.d-user
+    src: sudoers.d-user.j2
     dest: /etc/sudoers.d/50-user
     mode: 0440
-  with_items: "{{ users }}"
 - name: add users for ssh access
   become: true
   user:
